Update .env with production frontend origin
Added production frontend origin for CORS.

--- a/Backend/.env
+++ b/Backend/.env
@@ -11,8 +11,10 @@ EMAIL_FROM=sanketkulkarni469@gmail.com
 EMAIL_USER=monikawasekar07@gmail.com
 EMAIL_PASS=vdpovuwewphcbwe
 ALLOW_ALL_ORIGINS=true
+FRONTEND_PROD_ORIGIN=https://pranav-new-20-12-resto-project-1.onrender.com
 
 
 
 # Frontend origin allowed by CORS (development)
+
 
