--- a/Backend/package.json
+++ b/Backend/package.json
@@ -14,15 +14,16 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
+    "@sendgrid/mail": "^7.7.0",
     "bcryptjs": "^3.0.3",
     "body-parser": "^2.2.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.19.3",
-    "nodemailer": "^7.0.10",
-    "@sendgrid/mail": "^7.7.0"
+    "mongoose": "^8.21.0",
+    "node-cron": "^4.2.1",
+    "nodemailer": "^7.0.10"
   },
   "devDependencies": {
     "node-fetch": "^2.7.0",
